--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
   <link rel="manifest" href="/favicons/site.webmanifest">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
-  <meta name="msapplication-TileColor" content="#0f172a">
+  <meta name="theme-color" content="#1e293b">
+  <meta name="msapplication-TileColor" content="#1e293b">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Anirudha Simha</title>
 </head>
