--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Document metadata -->
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anirudha Simha</title>
+  <meta name="description" content="Anirudha Simha's personal website – portfolio, projects, writing, and more.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://anirudha-simha.github.io/" />
+
+  <!-- Favicons and manifest -->
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-  <link rel="manifest" href="/favicons/site.webmanifest">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+
+  <!-- Theme and platform colors -->
   <meta name="theme-color" content="#1e293b">
   <meta name="msapplication-TileColor" content="#1e293b">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anirudha Simha</title>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- Performance optimizations -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Social sharing meta tags -->
+  <!-- Open Graph -->
+  <meta property="og:title" content="Anirudha Simha" />
+  <meta property="og:description" content="Anirudha Simha's personal website – Portfolio, projects, writing, and more." />
+  <meta property="og:image" content="/favicons/android-chrome-512x512.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://anirudha-simha.github.io/" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Anirudha Simha" />
+  <meta name="twitter:description" content="Anirudha Simha's personal website – Portfolio, projects, writing, and more." />
+  <meta name="twitter:image" content="/favicons/android-chrome-512x512.png" />
 </head>
 <body>
 <div id="root"></div>
